projects/vb6parse/snapshots/tests/library/objects/typename/typename_array_type_detection.snap
---
source: projects/vb6parse/tests/library/objects/typename.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: InStr
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: TypeName
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: Identifier
                                                  text: arr
                                    - kind: RightParenthesis
                                      text: )
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: StringLiteralExpression
                                  children:
                                    - kind: StringLiteral
                                      text: "\"()\""
                        - kind: RightParenthesis
                          text: )
                    - kind: Whitespace
                      text: " "
                    - kind: GreaterThanOperator
                      text: ">"
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "0"
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: CallStatement
                      children:
                        - kind: Identifier
                          text: Debug
                        - kind: PeriodOperator
                          text: "."
                        - kind: PrintKeyword
                          text: Print
                        - kind: Whitespace
                          text: " "
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: StringLiteralExpression
                                      children:
                                        - kind: StringLiteral
                                          text: "\"Array of type: \""
                                    - kind: Whitespace
                                      text: " "
                                    - kind: Ampersand
                                      text: "&"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: CallExpression
                                      children:
                                        - kind: Identifier
                                          text: Left$
                                        - kind: LeftParenthesis
                                          text: (
                                        - kind: ArgumentList
                                          children:
                                            - kind: Argument
                                              children:
                                                - kind: CallExpression
                                                  children:
                                                    - kind: Identifier
                                                      text: TypeName
                                                    - kind: LeftParenthesis
                                                      text: (
                                                    - kind: ArgumentList
                                                      children:
                                                        - kind: Argument
                                                          children:
                                                            - kind: IdentifierExpression
                                                              children:
                                                                - kind: Identifier
                                                                  text: arr
                                                    - kind: RightParenthesis
                                                      text: )
                                            - kind: Comma
                                              text: ","
                                            - kind: Whitespace
                                              text: " "
                                            - kind: Argument
                                              children:
                                                - kind: BinaryExpression
                                                  children:
                                                    - kind: CallExpression
                                                      children:
                                                        - kind: LenKeyword
                                                          text: Len
                                                        - kind: LeftParenthesis
                                                          text: (
                                                        - kind: ArgumentList
                                                          children:
                                                            - kind: Argument
                                                              children:
                                                                - kind: CallExpression
                                                                  children:
                                                                    - kind: Identifier
                                                                      text: TypeName
                                                                    - kind: LeftParenthesis
                                                                      text: (
                                                                    - kind: ArgumentList
                                                                      children:
                                                                        - kind: Argument
                                                                          children:
                                                                            - kind: IdentifierExpression
                                                                              children:
                                                                                - kind: Identifier
                                                                                  text: arr
                                                                    - kind: RightParenthesis
                                                                      text: )
                                                        - kind: RightParenthesis
                                                          text: )
                                                    - kind: Whitespace
                                                      text: " "
                                                    - kind: SubtractionOperator
                                                      text: "-"
                                                    - kind: Whitespace
                                                      text: " "
                                                    - kind: NumericLiteralExpression
                                                      children:
                                                        - kind: IntegerLiteral
                                                          text: "2"
                                        - kind: RightParenthesis
                                          text: )
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
